--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cow": "cowsay strzeżcie się aktualizacji npm"
+    "cow": "cowsay strzeżcie się aktualizacji npm",
+    "sass": "node-sass -w style.scss style.css"
   },
   "repository": {
     "type": "git",
