--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "formularze",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,5 +21,9 @@
   "devDependencies": {
     "cowsay": "^1.4.0",
     "node-sass": "^4.14.1"
-  }
+  },
+  "dependencies": {
+    "moment": "^2.26.0"
+  },
+  "description": ""
 }
